--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -2,96 +2,36 @@
 layout: default
 ---
 
-<main style="background-color: #0e091d; color: white;">
-  <!-- Hero Section -->
-  <section class="blog-single-hero" style="background-image: url({{ featured_image | url }}); color: white;">
-    <h1 class="head_text" style="color: white;">{{ title }}</h1>
-    <h2 class="subhead_text" style="color: white;">{{ author }}</h2>
-    <div class="blog-hashtags">
-      {% set comma = joiner() %}
-      {% for tag in tags -%}
-        {% if tag !== 'post' %}
-          {{ comma() }}
-          <a class="post-tag" href="/tags/{{ tag | slug }}" style="color: white;">{{ tag }}</a>
-        {% endif %}
-      {%- endfor %}
+<article class="flex flex-col items-center">
+    {% if featured_image %}
+    <img src="{{ featured_image | url }}" loading="lazy" alt=""{% if featured_image_classes %} class="{{ featured_image_classes }}"{% endif %}>
+    {% endif %}
+    <div class="writing">
+    
+
+        <header class="py-12">
+            <h1 class="mb-2">{{ title }}</h1>
+            <time>{{ page.date | readableDate }}</time>
+            <div id="share-buttons"> <!-- Facebook --> <a href="https://www.facebook.com/sharer.php?u=https://frinmash.blogspot.com" target="_blank"><img src="https://4.bp.blogspot.com/-raFYZvIFUV0/UwNI2ek6i3I/AAAAAAAAGSA/zs-kwq0q58E/s1600/facebook.png" alt="Facebook" /></a> <!-- Twitter --> <a href="https://twitter.com/share?url=https://frinmash.blogspot.com&text=Simple Share Buttons" target="_blank"><img src="https://4.bp.blogspot.com/--ISQEurz3aE/UwNI4hDaQMI/AAAAAAAAGS4/ZAgmPiM9Xpk/s1600/twitter.png" alt="Twitter" /></a> <!-- Google+ --> <a href="https://plus.google.com/share?url=https://frinmash.blogspot.com" target="_blank"><img src="https://2.bp.blogspot.com/-9ijXNtKTaSk/UwNI3ANT4MI/AAAAAAAAGSY/Tu4kE8x9SnI/s1600/google.png" alt="Google" /></a> <!-- Digg --> <a href="https://www.digg.com/submit?url=https://frinmash.blogspot.com" target="_blank"><img src="https://4.bp.blogspot.com/-AUdsqB7cajQ/UwNI2iqT_AI/AAAAAAAAGR8/0FV_ZcsiylU/s1600/diggit.png" alt="Digg" /></a> <!-- Reddit --> <a href="http://reddit.com/submit?url=https://frinmash.blogspot.com&title=Simple Share Buttons" target="_blank"><img src="https://4.bp.blogspot.com/-1-mZEa1eiyc/UwNI4JytiFI/AAAAAAAAGSs/AoKmBkkJR-s/s1600/reddit.png" alt="Reddit" /></a> <!-- LinkedIn --> <a href="https://www.linkedin.com/shareArticle?mini=true&url=https://frinmash.blogspot.com" target="_blank"><img src="https://2.bp.blogspot.com/-3_cATk7Wlho/UwNI3eoTTLI/AAAAAAAAGSQ/Y8cpq6S-SeQ/s1600/linkedin.png" alt="LinkedIn" /></a> <!-- Pinterest --> <a href="javascript:void((function()%7Bvar%20e=document.createElement('script');e.setAttribute('type','text/javascript');e.setAttribute('charset','UTF-8');e.setAttribute('src','https://assets.pinterest.com/js/pinmarklet.js?r='+Math.random()*99999999);document.body.appendChild(e)%7D)());"><img src="https://2.bp.blogspot.com/-3CfsOmDx-Dg/UwNI3kMVjgI/AAAAAAAAGSU/OSixn3lcjX4/s1600/pinterest.png" alt="Pinterest" /></a> <!-- StumbleUpon--> <a href="http://www.stumbleupon.com/submit?url=https://frinmash.blogspot.com&title=Simple Share Buttons" target="_blank"><img src="https://2.bp.blogspot.com/-si3v8X2IVGI/UwNI4bncQrI/AAAAAAAAGSo/iZepRnIJFZU/s1600/stumbleupon.png" alt="StumbleUpon" /></a> <!-- Email --> <a href="mailto:?Subject=FrinMash&Body=I%20saw%20this%20and%20thought%20of%20you!%20 https://frinmash.blogspot.com"><img src="https://4.bp.blogspot.com/-njgKtNLrPqI/UwNI2o-9WfI/AAAAAAAAGR4/f8da1gBgyLs/s1600/email.png" alt="Email" /></a> </div>
+
+ 
+
+        </header>
+        {{ content | safe }}
+        
     </div>
-    <p style="margin-top: 20px; color: white;" class="blog-date rainbow">{{ page.date | readableDate }}</p>
-  </section>
-
-  <!-- Blog Indicator -->
-  <div class="blog-indicator"></div>
-
-  <!-- Main Content and Social Sharing -->
-  <section class="blog-single-container container" style="color: white;">
-    <!-- Social Sharing -->
-    <div class="blog-social-share">
-      <div class="share-btn-group">
-        <a href="https://www.facebook.com/sharer.php?u={{ page.url | url }}" target="_blank" aria-label="Share on Facebook">
-          <svg class="social-svg-icon" width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path fill-rule="evenodd" clip-rule="evenodd" d="M0 20.1117C0 30.055 7.22167 38.3233 16.6667 40V25.555H11.6667V20H16.6667V15.555C16.6667 10.555 19.8883 7.77833 24.445 7.77833C25.8883 7.77833 27.445 8 28.8883 8.22167V13.3333H26.3333C23.8883 13.3333 23.3333 14.555 23.3333 16.1117V20H28.6667L27.7783 25.555H23.3333V40C32.7783 38.3233 40 30.0567 40 20.1117C40 9.05 31 0 20 0C9 0 0 9.05 0 20.1117Z" fill="#850505"/>
-          </svg>
-        </a>
-        <a href="https://twitter.com/share?url={{ page.url | url }}&text={{ title }}" target="_blank" aria-label="Share on Twitter">
-          <svg class="social-svg-icon" width="44" height="44" viewBox="0 0 44 44" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path d="M42 8.91999C40.529 9.56437 38.9283 10.0281 37.2794 10.2087C38.9913 9.17596 40.2732 7.54434 40.8847 5.61999C39.2784 6.59041 37.5186 7.27089 35.6834 7.63123C34.9165 6.79855 33.9888 6.1352 32.9583 5.68251C31.9278 5.22982 30.8166 4.9975 29.6938 5.00002C25.1511 5.00002 21.4977 8.73937 21.4977 13.3281C21.4977 13.9725 21.5746 14.6169 21.6996 15.2368C14.8975 14.8756 8.83091 11.5756 4.79774 6.5231C4.06285 7.79777 3.67775 9.24914 3.68249 10.7262C3.68249 13.6161 5.12943 16.1644 7.3359 17.663C6.03559 17.611 4.76574 17.2481 3.62961 16.6037V16.7062C3.62961 20.7531 6.44658 24.1068 10.2009 24.8781C9.49602 25.0641 8.77085 25.1592 8.04254 25.1613C7.50895 25.1613 7.00421 25.1076 6.49465 25.0343C7.53299 28.3343 10.5567 30.7312 14.1572 30.8093C11.3402 33.05 7.8118 34.368 3.98053 34.368C3.29311 34.368 2.65857 34.3436 2 34.2655C5.63418 36.6331 9.94616 38 14.5898 38C29.6649 38 37.914 25.3175 37.914 14.3093C37.914 13.9481 37.914 13.5868 37.8899 13.2256C39.4859 12.0394 40.8847 10.57 42 8.91999Z" fill="white"/>
-          </svg>
-        </a>
-        <a href="https://www.linkedin.com/shareArticle?mini=true&url={{ page.url | url }}" target="_blank" aria-label="Share on LinkedIn">
-          <svg class="social-svg-icon" width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path d="M34.0819 34.0824H28.1552V24.8007C28.1552 22.5874 28.1156 19.7382 25.0727 19.7382C21.9858 19.7382 21.5134 22.1498 21.5134 24.6396V34.0818H15.5869V14.9949H21.2764V17.6034H21.3561C21.9255 16.6298 22.7483 15.8289 23.7368 15.2859C24.7254 14.7429 25.8428 14.4783 26.9698 14.5201C32.9769 14.5201 34.0844 18.4713 34.0844 23.6117L34.0819 34.0824ZM8.89937 12.386C6.99984 12.3863 5.45969 10.8467 5.45937 8.94713C5.45906 7.0476 6.99859 5.50744 8.89812 5.50713C10.7977 5.50666 12.3378 7.04635 12.3381 8.94588C12.3383 9.85807 11.9761 10.733 11.3312 11.3781C10.6863 12.0233 9.81157 12.3858 8.89937 12.386ZM11.8628 34.0826H5.92984V14.9949H11.8627V34.0824L11.8628 34.0826ZM37.0366 0.00291123H2.95172C1.34078 -0.0152138 0.0196875 1.27525 0 2.88619V37.1132C0.0190625 38.7249 1.34 40.0167 2.95156 39.9998H37.0366C38.6516 40.0198 39.9777 38.7281 40 37.1132V2.88354C39.977 1.26947 38.6508 -0.0208388 37.0366 0.000254983" fill="#850505"/>
-          </svg>
-        </a>
-        <a href="https://pinterest.com/pin/create/button/?url={{ page.url | url }}&description={{ title }}" target="_blank" aria-label="Share on Pinterest">
-          <svg class="social-svg-icon" width="41" height="41" viewBox="0 0 41 41" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path d="M0.00280762 20.0018C0.00280762 28.5401 5.35447 35.8301 12.8861 38.6984C12.7028 37.1368 12.5078 34.5618 12.9278 32.7551C13.2895 31.2018 15.2628 22.8584 15.2628 22.8584C15.2628 22.8584 14.6678 21.6668 14.6678 19.9018C14.6678 17.1351 16.2711 15.0684 18.2695 15.0684C19.9695 15.0684 20.7895 16.3434 20.7895 17.8718C20.7895 19.5801 19.7011 22.1334 19.1395 24.5018C18.6711 26.4834 20.1345 28.1001 22.0878 28.1001C25.6261 28.1001 28.3478 24.3684 28.3478 18.9818C28.3478 14.2134 24.9211 10.8818 20.0295 10.8818C14.3661 10.8818 11.0411 15.1301 11.0411 19.5218C11.0411 21.2334 11.6995 23.0668 12.5228 24.0651C12.593 24.1405 12.6426 24.2327 12.6668 24.3328C12.6911 24.4329 12.6891 24.5376 12.6611 24.6368C12.5095 25.2668 12.1728 26.6184 12.1078 26.8951C12.0195 27.2584 11.8195 27.3368 11.4411 27.1601C8.95447 26.0034 7.40114 22.3684 7.40114 19.4484C7.40114 13.1668 11.9628 7.4001 20.5545 7.4001C27.4611 7.4001 32.8295 12.3218 32.8295 18.8984C32.8295 25.7601 28.5045 31.2834 22.4978 31.2834C20.4795 31.2834 18.5845 30.2334 17.9345 28.9951C17.9345 28.9951 16.9361 32.7984 16.6945 33.7284C16.2245 35.5351 14.9211 37.8218 14.1128 39.1201C15.9761 39.6934 17.9528 40.0018 20.0028 40.0018C31.0478 40.0018 40.0028 31.0468 40.0028 20.0018C40.0028 8.95677 31.0478 0.00177002 20.0028 0.00177002C8.95781 0.00177002 0.00280762 8.95677 0.00280762 20.0018Z" fill="#850505"/>
-          </svg>
-        </a>
-      </div>
-    </div>
-
-    <!-- Main Blog Content -->
-    <div class="blog-single-content" style="color: white;">
-      {{ content | safe }}
-    </div>
-
-    <!-- Recommendations Section -->
-    <div class="blog-single-recommendations" style="color: white;">
-      <h2 class="headline" style="color: white;">Recommendations</h2>
-      {% for post in collections.post | reverse %}
-        {% if title !== post.data.title %}
-          <a href="{{ post.url | url }}" class="blog-link" style="color: white;">
-            <div class="blog-card">
-              <h1 class="blog-title" style="color: white;">{{ post.data.title }}</h1>
-              <div class="blog-hashtags">
-                {% set comma = joiner() %}
-                {% for tag in post.data.tags -%}
-                  {% if tag !== 'post' %}
-                    {{ comma() }}
-                    <p class="post-tag" style="color: white;">{{ tag }}</p>
-                  {% endif %}
-                {%- endfor %}
-              </div>
-              <p class="blog-description" style="color: white;">{{ post.data.description | truncate(80) }}</p>
-              <div class="blog-details">
-                <p class="blog-date" style="color: white;">{{ post.data.date | readableDate }}</p>
-              </div>
-            </div>
-          </a>
-        {% endif %}
-      {% endfor %}
-    </div>
-
-    <!-- Work Section -->
-    <section class="work-section work-section--misc max-w-4xl p-16 mt-24 flex items-start self-center relative sm:p-8 sm:mt-12 sm:flex-col-reverse" style="color: white;">
-      <div>
-        <p style="color: white;">I enjoy <a href="/blog" class="link-misc" style="color: white;">writing</a> about things I learn & I know, building scalable Digital Marketing campaigns, and learning a bit of <a href="https://github.com/rakshitsoral" class="link-misc" style="color: white;">web development</a>, side-by-side.</p>
-        <p class="mt-6" style="color: white;">When not in front of a screen I like to listen music, play guitar, read books, and binge-watch anime/ series.</p>
-      </div>
-      <div class="img relative flex-shrink-0 ml-12 sm:ml-0 sm:mb-8">
-        <img src="/assets/img/Rakshit Soral.png" alt="Rakshit Soral portrait" loading="lazy" height="275" width="275" class="z-10 relative transform -rotate-2">
-      </div>
-      <span class="curl3 absolute block bg-no-repeat sm:hidden" aria-hidden="true"></span>
+    <section class="work-section work-section--misc max-w-4xl p-16 mt-24 flex items-start self-center relative sm:p-8 sm:mt-12  sm:flex-col-reverse">
+        <div>
+            <p>I enjoy <a href="/blog" class="link-misc">writing</a> about things I learn & I know, building scalable Digital Marketing campaigns, and learning a bit of <a href="https://github.com/rakshitsoral" class="link-misc">web development</a>, side-by-side.</p>
+            <p class="mt-6">When not in front of a screen I like to listen music, play guitar, read books, and binge-watch anime/ series. </p>
+        </div>
+        <div class="img relative flex-shrink-0 ml-12 sm:ml-0 sm:mb-8"><img src="/assets/img/Rakshit Soral.png" alt="Rakshit Soral portrait" loading="lazy" height="275" width="275" class="z-10 relative transform -rotate-2"></div>
+        <span class="curl3 absolute block bg-no-repeat sm:hidden" aria-hidden="true"></span>
+        
     </section>
-  </section>
-</main>
+
+ 
+
+</article>
+
+
