Revert "Added contact form"
This reverts commit 38a073ce4d23c6d8135eaa585725ef886e13be58.

--- a/src/index.njk
+++ b/src/index.njk
@@ -3,7 +3,7 @@ layout: default
 meta_title: Demand Generation Consultant in India
 meta_description: Rakshit is a reliable Demand Generation Consultant, blogger, and a hobbyist developer playing around with HTML, CSS, wordpress and JAMstack.
 body_class: home
-title: Demand Generation Consultant, Conversion Strategist
+title: Digital Marketing Consultant, Conversion Strategist
 roughjs: true
 ---
 
@@ -22,17 +22,4 @@ roughjs: true
         <div class="img relative flex-shrink-0 ml-12 sm:ml-0 sm:mb-8"><img src="/assets/img/Rakshit Soral.png" loading="lazy" alt="Rakshit Soral portrait" height="275" width="275" class="z-10 relative transform -rotate-2"></div>
         <span class="curl3 absolute block bg-no-repeat sm:hidden" aria-hidden="true"></span>
     </section>
-     <section class="contact" id="contact">
-
-    <h1 class="head_text" style="text-align: center; padding-bottom: 40px;"><span
-        class="head_text rainbow">Con</span>tact</h1>
-    <div class="contact-container container">
-
-      {% include "contact-form.njk" %}
-
-    </div>
-    <div class="linkedin-callout"> 
-        <p> I usually respond instantly on  <a href="https://www.linkedin.com/in/rakshit.soral" class="highlight" target="_blank">LinkedIn</a> </p>
-    </div>
-  </section>
 </div>
