--- a/src/index.njk
+++ b/src/index.njk
@@ -11,10 +11,17 @@ roughjs: true
     <section class="text-center max-w-4xl mx-auto mb-40" aria-labelledby="heading">
         <h1 class="font-display text-4xl leading-none sm:text-3xl">Hi! I’m Rakshit Soral, a <span class="highlight-yellow px-4 -mx-2 inline-block relative">reliable</span> Digital Marketer.</h1>
         <p class="text-lg mt-8 mx-auto max-w-3xl sm:text-lg">I believe marketing is all about conveying your <strong class="box-blue mx-1">message</strong> to consumers and convincing them to show<strong class="box-green mx-1">interest</strong>, and <strong class="box-red mx-1">invest</strong> in your product & services</p>
-        <div class="flex justify-center gap-4 mt-8">
-            <a href="/work" class="inline-block px-6 py-3 bg-[#02082d9] text-black font-semibold rounded-md hover:bg-opacity-80 transition-colors">View Portfolio</a>
-            <a href="/resume" class="inline-block px-6 py-3 bg-[#BF870B] text-black font-semibold rounded-md hover:bg-opacity-80 transition-colors">Download Resume</a>
-        </div>
+       <div class="flex justify-center gap-4 mt-8">
+  <a href="/work" 
+     class="inline-block px-6 py-3 bg-[#02082d] text-black font-semibold rounded-none hover:bg-green-500 transition-colors duration-300">
+    View Portfolio
+  </a>
+  <a href="/resume" 
+     class="inline-block px-6 py-3 bg-[#BF870B] text-black font-semibold rounded-none hover:bg-green-500 transition-colors duration-300">
+    Download Resume
+  </a>
+</div>
+
     </section>
     {% include "partials/work-list.njk" %}
     <section class="work-section work-section--misc max-w-4xl p-16 mt-24 flex items-start self-center relative sm:p-8 sm:mt-12  sm:flex-col-reverse">
