Changed portfolio button to blue color

--- a/src/index.njk
+++ b/src/index.njk
@@ -25,7 +25,7 @@ roughjs: true
        transition: background-color 0.3s ease;
      "
      onmouseover="this.style.backgroundColor='#28a745'"
-     onmouseout="this.style.backgroundColor='#02082d'">
+     onmouseout="this.style.backgroundColor='#60a5fa'">
     View Portfolio
   </a>
 
