Changed resume layout

--- a/src/index.njk
+++ b/src/index.njk
@@ -17,7 +17,7 @@ roughjs: true
      style="
        display: inline-block;
        padding: 12px 24px;
-       background-color: #02082d;
+       background-color: #60a5fa;
        color: black;
        font-weight: 600;
        text-decoration: none;
