--- a/src/resume.njk
+++ b/src/resume.njk
@@ -1,8 +1,10 @@
-
 ---
 layout: default
-title: Resume
+title: A Short Bio
 ---
+
+<!DOCTYPE html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>CV Printable A4 - Rakshit Soral</title>
