--- a/src/resume.njk
+++ b/src/resume.njk
@@ -10,49 +10,39 @@ title: A Short Bio
     <title>CV Printable A4 - Rakshit Soral</title>
     <meta name="viewport" content="width=device-width" />
     <meta name="description" content="Rakshit Soral - Curriculum Vitae" />
-    <meta charset="UTF-8">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href='https://fonts.googleapis.com/css?family=Oswald:400,700|Lato:400,300' rel='stylesheet' type='text/css'>
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
     <style>
         body {
             background: rgb(204,204,204); 
         }
-        page {
-            background: #fff;
-            display: block;
-            margin: 0 auto;
-            margin-bottom: 5mm;
-            margin-top: 5mm;
-        }
-        page[size="A4"] {  
+        .page {
             width: 210mm;
-            height: 297mm;
-        }
-        @page {
-            size: 210mm 297mm;
-            margin: 0; 
+            min-height: 297mm;
+            background: #fff;
+            margin: 0 auto 5mm auto;
+            box-sizing: border-box;
+            padding: 0;
+            position: relative;
         }
         @media print {
-            html, body, page {
+            body, html {
                 width: 210mm;
-                height: 100%;
-                margin: 0 !important; 
+                min-height: 297mm;
+                margin: 0 !important;
                 padding: 0 !important;
-                overflow: hidden; 
+                background: #fff;
+                overflow: visible !important;
             }
-            .no-overflow {
-                overflow: hidden; 
+            .page {
+                page-break-after: always;
+                overflow: visible !important;
             }
-            #Header, #Footer { 
+            .no-print, .no-print * {
                 display: none !important;
             }
-            button {
-                display: none;
-            }
         }
+
         html, body, div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, abbr, address, cite, code, del, dfn, em, img, ins, kbd, q, samp, small, strong, sub, sup, var, b, i, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, figcaption, figure, footer, header, hgroup, menu, nav, section, summary, time, mark, audio, video {
             border: 0;
             font: inherit;
@@ -69,28 +59,11 @@ title: A Short Bio
             font-size: 11pt;
             color: #222;
         }
-        .clear {
-            clear: both;
-        }
-        p {
-            line-height: 15pt;
-            margin-bottom: 4mm;
-            color: #444;
-            word-break: break-word;
-        }
-        a {
-            text-decoration: none;
-        }
-        a:hover { 
-            text-decoration: underline;
-        }
-        a, .fa-check, .fa-arrow-right {
-            color: #da2d2d;
-        }
         .cv {
             width: 210mm;
-            height: 297mm;
+            min-height: 297mm;
             background: #fff;
+            padding: 0;
         }
         .mainDetails {
             padding: 8mm 0 0 8mm;
@@ -113,7 +86,7 @@ title: A Short Bio
             font-family: 'Oswald', Helvetica, Arial, sans-serif;
             line-height: 20pt;
         }
-        #mainArea, #mainAreaTwo {
+        #mainArea {
             padding: 0 8mm;
         }
         #headshot {
@@ -144,10 +117,6 @@ title: A Short Bio
             color: #444; 
             padding: 4px 8px;
             text-decoration: none;
-            -webkit-transition: all .1s ease-in;
-            -moz-transition: all .1s ease-in;
-            -o-transition: all .1s ease-in;
-            -ms-transition: all .1s ease-in;
             transition: all .1s ease-in;
         }
         .contactDetails ul li a:hover { 
@@ -159,6 +128,9 @@ title: A Short Bio
         }
         .bold {
             font-weight: bold;
+        }
+        .clear {
+            clear: both;
         }
         section {
             border-top: 1mm dotted #444;
@@ -206,8 +178,6 @@ title: A Short Bio
         }
         .keySkills {
             list-style-type: none;
-            -moz-column-count: 3;
-            -webkit-column-count: 3;
             column-count: 3;
             margin-bottom: 4mm;
             font-size: 11pt;
@@ -217,29 +187,17 @@ title: A Short Bio
         .keySkills ul li {
             margin-bottom: 6mm;
         }
-        .clients {
+        .clients, .list {
             list-style-type: none;
-            -moz-column-count: 1;
-            -webkit-column-count: 1;
             column-count: 1;
             margin-bottom: 4mm;
             font-size: 11pt;
             color: #444;
             line-height: 15pt;
-            text-decoration: none;
         }
-        .clients ul li {
+        .clients ul li,
+        .list ul li {
             margin-bottom: 6mm;
-        }
-        .list {
-            list-style-type: none;
-            -moz-column-count: 1;
-            -webkit-column-count: 1;
-            column-count: 1;
-            margin-bottom: 4mm;
-            font-size: 11pt;
-            color: #444;
-            line-height: 15pt;
         }
         .list ul {
             list-style-type: disc;
@@ -267,11 +225,6 @@ title: A Short Bio
             box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
             color: #da2d2d;
         }
-        @media print {    
-            .no-print, .no-print * {
-                display: none !important;
-            }
-        }
         #button {
             width: 210mm;
             height: 40px;
@@ -281,19 +234,30 @@ title: A Short Bio
             border-bottom: solid #da2d2d 6px;
             top: 0px;
         }
+        p {
+            line-height: 15pt;
+            margin-bottom: 4mm;
+            color: #444;
+            word-break: break-word;
+        }
+        a {
+            text-decoration: none;
+        }
+        a:hover { 
+            text-decoration: underline;
+        }
+        a, .fa-check, .fa-arrow-right {
+            color: #da2d2d;
+        }
     </style>
 </head>
 <body id="top">
     <!-- Page 1 -->
-    <page size="A4">
+    <div class="page">
         <div id="button" class="no-print">
-            <button type="button" onclick="myFunction()"><span class="button-txt"><i class="fa fa-print" aria-hidden="true"></i>
-            &nbsp;Print</span></button>
-            <script>
-                function myFunction() {
-                    window.print();
-                }
-            </script>
+            <button type="button" onclick="window.print()"><span class="button-txt">
+                <i class="fa fa-print" aria-hidden="true"></i> &nbsp;Print</span>
+            </button>
         </div>
         <div class="cv">
             <div id="header">
@@ -335,43 +299,43 @@ title: A Short Bio
                     <div class="sectionContent">
                         <ul class="keySkills">
                             <li class="subDetails">Marketing Automation & CRM</li>
-                            <li><i class="fa fa-check" aria-hidden="true"></i>&nbsp;HubSpot</li>
-                            <li><i class="fa fa-check" aria-hidden="true"></i>&nbsp;Freshworks CRM</li>
-                            <li><i class="fa fa-check" aria-hidden="true"></i>&nbsp;Mailchimp</li>
-                            <li><i class="fa fa-check" aria-hidden="true"></i>&nbsp;Apollo.io</li>
-                            <li><i class="fa fa-check" aria-hidden="true"></i>&nbsp;Outplay</li>
-                            <li><i class="fa fa-check" aria-hidden="true"></i>&nbsp;Clay.com</li>
-                            <li><i class="fa fa-check" aria-hidden="true"></i>&nbsp;Slintel</li>
-                            <li><i class="fa fa-check" aria-hidden="true"></i>&nbsp;Bambora</li>
-                            <li><i class="fa fa-check" aria-hidden="true"></i>&nbsp;Tribilio (ABM)</li>
+                            <li><i class="fa fa-check"></i>&nbsp;HubSpot</li>
+                            <li><i class="fa fa-check"></i>&nbsp;Freshworks CRM</li>
+                            <li><i class="fa fa-check"></i>&nbsp;Mailchimp</li>
+                            <li><i class="fa fa-check"></i>&nbsp;Apollo.io</li>
+                            <li><i class="fa fa-check"></i>&nbsp;Outplay</li>
+                            <li><i class="fa fa-check"></i>&nbsp;Clay.com</li>
+                            <li><i class="fa fa-check"></i>&nbsp;Slintel</li>
+                            <li><i class="fa fa-check"></i>&nbsp;Bambora</li>
+                            <li><i class="fa fa-check"></i>&nbsp;Tribilio (ABM)</li>
                             <li class="subDetails">SEO & Keyword Research</li>
-                            <li><i class="fa fa-check" aria-hidden="true"></i>&nbsp;Ahrefs</li>
-                            <li><i class="fa fa-check" aria-hidden="true"></i>&nbsp;Ubersuggest</li>
-                            <li><i class="fa fa-check" aria-hidden="true"></i>&nbsp;Google Keyword Planner</li>
-                            <li><i class="fa fa-check" aria-hidden="true"></i>&nbsp;Google Search Console</li>
+                            <li><i class="fa fa-check"></i>&nbsp;Ahrefs</li>
+                            <li><i class="fa fa-check"></i>&nbsp;Ubersuggest</li>
+                            <li><i class="fa fa-check"></i>&nbsp;Google Keyword Planner</li>
+                            <li><i class="fa fa-check"></i>&nbsp;Google Search Console</li>
                             <li class="subDetails">Analytics & Performance Tracking</li>
-                            <li><i class="fa fa-check" aria-hidden="true"></i>&nbsp;Google Analytics 4 (GA4)</li>
-                            <li><i class="fa fa-check" aria-hidden="true"></i>&nbsp;Google Search Console</li>
-                            <li><i class="fa fa-check" aria-hidden="true"></i>&nbsp;LinkedIn Campaign Manager</li>
-                            <li><i class="fa fa-check" aria-hidden="true"></i>&nbsp;Google Ads Manager</li>
+                            <li><i class="fa fa-check"></i>&nbsp;Google Analytics 4 (GA4)</li>
+                            <li><i class="fa fa-check"></i>&nbsp;Google Search Console</li>
+                            <li><i class="fa fa-check"></i>&nbsp;LinkedIn Campaign Manager</li>
+                            <li><i class="fa fa-check"></i>&nbsp;Google Ads Manager</li>
                             <li class="subDetails">Content Creation & CMS</li>
-                            <li><i class="fa fa-check" aria-hidden="true"></i>&nbsp;WordPress CMS</li>
-                            <li><i class="fa fa-check" aria-hidden="true"></i>&nbsp;Canva</li>
-                            <li><i class="fa fa-check" aria-hidden="true"></i>&nbsp;GitHub (for site versioning)</li>
-                            <li><i class="fa fa-check" aria-hidden="true"></i>&nbsp;ChatGPT</li>
-                            <li><i class="fa fa-check" aria-hidden="true"></i>&nbsp;Claude</li>
-                            <li><i class="fa fa-check" aria-hidden="true"></i>&nbsp;DeepSeek</li>
-                            <li><i class="fa fa-check" aria-hidden="true"></i>&nbsp;Grok</li>
+                            <li><i class="fa fa-check"></i>&nbsp;WordPress CMS</li>
+                            <li><i class="fa fa-check"></i>&nbsp;Canva</li>
+                            <li><i class="fa fa-check"></i>&nbsp;GitHub (for site versioning)</li>
+                            <li><i class="fa fa-check"></i>&nbsp;ChatGPT</li>
+                            <li><i class="fa fa-check"></i>&nbsp;Claude</li>
+                            <li><i class="fa fa-check"></i>&nbsp;DeepSeek</li>
+                            <li><i class="fa fa-check"></i>&nbsp;Grok</li>
                             <li class="subDetails">Sales & Lead Intelligence Tools</li>
-                            <li><i class="fa fa-check" aria-hidden="true"></i>&nbsp;Slintel</li>
-                            <li><i class="fa fa-check" aria-hidden="true"></i>&nbsp;Bambora</li>
-                            <li><i class="fa fa-check" aria-hidden="true"></i>&nbsp;Clay.com</li>
-                            <li><i class="fa fa-check" aria-hidden="true"></i>&nbsp;Apollo.io</li>
+                            <li><i class="fa fa-check"></i>&nbsp;Slintel</li>
+                            <li><i class="fa fa-check"></i>&nbsp;Bambora</li>
+                            <li><i class="fa fa-check"></i>&nbsp;Clay.com</li>
+                            <li><i class="fa fa-check"></i>&nbsp;Apollo.io</li>
                             <li class="subDetails">AI & Productivity Tools</li>
-                            <li><i class="fa fa-check" aria-hidden="true"></i>&nbsp;ChatGPT</li>
-                            <li><i class="fa fa-check" aria-hidden="true"></i>&nbsp;Claude</li>
-                            <li><i class="fa fa-check" aria-hidden="true"></i>&nbsp;DeepSeek</li>
-                            <li><i class="fa fa-check" aria-hidden="true"></i>&nbsp;Grok</li>
+                            <li><i class="fa fa-check"></i>&nbsp;ChatGPT</li>
+                            <li><i class="fa fa-check"></i>&nbsp;Claude</li>
+                            <li><i class="fa fa-check"></i>&nbsp;DeepSeek</li>
+                            <li><i class="fa fa-check"></i>&nbsp;Grok</li>
                         </ul>
                     </div>
                     <div class="clear"></div>
@@ -390,9 +354,9 @@ title: A Short Bio
                 </section>
             </div>
         </div>
-    </page>
+    </div>
     <!-- Page 2 -->
-    <page size="A4">
+    <div class="page">
         <div class="cv">
             <div id="mainArea">
                 <section>
@@ -466,6 +430,6 @@ title: A Short Bio
                 </section>
             </div>
         </div>
-    </page>
+    </div>
 </body>
 </html>
